infra/juber-app-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: juber-app
  labels:
    project: juber-app
spec:
  finalizers:
  - kubernetes
