infra/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: juber-app-backend
    project: juber-app
    type: deployment
  name: juber-app-backend-deployment
  namespace: juber-app
spec:
  minReadySeconds: 45
  replicas: 1
  selector:
    matchLabels:
      app: juber-app-backend
      project: juber-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: juber-app-backend
        project: juber-app
    spec:
      containers:
      - image: influx6/juber-app-backend:latest
        imagePullPolicy: Always
        name: juber-app-backend
        resources: {}
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: juber-app-backend
    project: juber-app
    type: service
  name: juber-app-backend-svc
  namespace: juber-app
spec:
  type: ClusterIP
  selector:
    app: juber-app-backend
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  sessionAffinity: None
