infra/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: juber-app-frontend
    project: juber-app
    type: deployment
  name: juber-app-frontend-deployment
  namespace: juber-app
spec:
  minReadySeconds: 30
  replicas: 1
  selector:
    matchLabels:
      app: juber-app-frontend
      project: juber-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: juber-app-frontend
        project: juber-app
    spec:
      containers:
      - image: influx6/juber-app-frontend:latest
        imagePullPolicy: Always
        name: juber-app-frontend
        resources: {}
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: juber-app-frontend
    project: juber-app
    type: service
  name: juber-app-frontend-svc
  namespace: juber-app
spec:
  selector:
    app: juber-app-frontend
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  sessionAffinity: None
  type: LoadBalancer
